--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
                         <h4 class="font-weight-bold mt-4 mb-3">PIC</h4>
                         <div class="form-group">
                             <label for="inputName" class="">Nama Lengkap<span class="text-danger"> *</span></label>
-                            <input type="text" id="inputPassword" class="form-control" placeholder="Nama Lengkap Anda" required>
+                            <input type="text" id="inputName" class="form-control" placeholder="Nama Lengkap Anda" required>
                             <div class="invalid-feedback">Mohon isi kolom ini</div>
                         </div>
                         <div class="form-group">
